# glQiwiApi

./: .coveragearc  .coveragerc  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  SETUP_REQUIREMENTS.txt  api.py  codecov.yaml  data.py  mypy.ini  playground.py  pyproject.toml  pytest.ini  qiwi_test.py  requirements.txt  setup.py  test.py  web_test.py  wheel
.github/workflows/: aws.yaml  ci.yml  codeql.yml  deploy.yml  locks.yml  publish_pypi.yml  python-package.yml  tests.yml
benchmarks/p2p/: test_performance.py
docs/: API.rst  Makefile  api.rst  conf.py  global.rst  index.rst  installation.rst  intro.rst  make.bat  polling.rst  quick_start.rst  requirements.txt  usage.rst  webhooks.rst
docs/API/: index.rst  qiwi_api.rst  qiwi_maps.rst  yoomoney_api.rst
docs/advanced_features/: cache.rst  index.rst  known-issues.rst  proxy.rst
docs/code/polling/: events.py  qiwi.py  with_aiogram.py  with_aiogram_non_blocking.py  without_globals.py
docs/code/webhooks/: qiwi.py
docs/examples/: basic_methods.rst  cache.rst  index.rst  p2p.rst  sync_support.rst  usage_with_aiogram.rst  usage_without_context.rst
docs/examples/other/: cache.rst  index.rst  sync_support.rst  usage_without_context.rst
docs/examples/qiwi/: basic_methods.rst  class_based.rst  index.rst  p2p.rst  polling.rst  qiwi_webhook.rst  usage_with_aiogram.rst
docs/examples/yoo_money/: HowTO.rst  basic_usage.rst  index.rst  token_registration.rst
docs/getting-started/: index.rst
docs/getting-started/qiwi/: examples.rst  index.rst  usage_with_aiogram.rst
docs/getting-started/yoomoney/: examples.rst  index.rst
docs/qiwi/: index.rst
docs/qiwi/types/: account.rst  index.rst  transaction.rst
docs/types/: index.rst  yoomoney_types.rst
docs/types/arbitrary/: index.rst
docs/types/qiwi_types/: account-info.rst  account.rst  balance.rst  bill.rst  hook.rst  identification.rst  index.rst  limit.rst  stats.rst  transaction.rst
docs/types/yoomoney_types/: account_info.rst  incoming-txn.rst  index.rst  operation-detail.rst  operation.rst  payment.rst  pre_payment.rst
examples/: advanced_methods.py  basic.py  basic_methods.py  p2p.py  qiwi_maps_example.py  quick_start.py  response_cache.py  sync_usage.py  usage_in_bots.py  without_context.py
examples/other/: response_cache.py  sync_usage.py  without_context.py
examples/qiwi/: aiogram_integration.py  basic_methods.py  error_handling.py  p2p.py  polling.py  polling_without_global_variables.py  pretty_webhook.py  qiwi_webhook.py  usage_in_bots.py
examples/yoo_money/: usage.py
glQiwiApi/: __init__.py  abstracts.py  aiohttp_custom_api.py  api.py  basic_requests_api.py  configs.py  data.py  dev.py  exceptions.py  funcs.py  mixins.py  qiwi.py  requirements.txt  test.py  types.py  utils.py  utils.pyi  yoo_money.py
glQiwiApi/base/: api_method.py
glQiwiApi/base/types/: __init__.py  _currencies.py  amount.py  base.py  errors.py
glQiwiApi/base_types/: __init__.py  _currencies.py  amount.py  base.py
glQiwiApi/base_types/arbitrary/: file.py  inputs.py
glQiwiApi/builtin/: __init__.py  logger.py  telegram.py
glQiwiApi/core/: __init__.py  abstracts.py  aiohttp_custom_api.py  basic_requests_api.py  cache.py  constants.py  core_mixins.py  handler.py  mixins.py  request_service.py  storage.py
glQiwiApi/core/abc/: api_method.py  base_api_client.py  router.py  url_builder.py  wrapper.py
glQiwiApi/core/builtin/: __init__.py  filters.py  logger.py  telegram.py
glQiwiApi/core/cache/: __init__.py  cached_types.py  constants.py  exceptions.py  invalidation.py  storage.py  utils.py
glQiwiApi/core/dispatcher/: _builtin_filters.py  config.py  dispatcher.py  filters.py  implementation.py  server.py
glQiwiApi/core/event_fetching/: dispatcher.py  executor.py  filters.py
glQiwiApi/core/session/: __init__.py  holder.py  pool.py
glQiwiApi/data_models/: __init__.py  basics.py
glQiwiApi/event_fetching/: dispatcher.py  executor.py
glQiwiApi/ext/: exceptions.py  ssl_configurator.py  url_builder.py  webhook_url.py
glQiwiApi/extensions/: __init__.py  ssl_configurator.py
glQiwiApi/models/: basics.py
glQiwiApi/plugins/: __init__.py  abc.py
glQiwiApi/qiwi/: API.py  __init__.py  aiohttp_api.py  base.py  basic_qiwi_config.py  client.py  exceptions.py  maps.py  qiwi_api.py  qiwi_default.py  qiwi_maps.py  settings.py  utils.py
glQiwiApi/tests/: basic.py  you_money_test.py
glQiwiApi/types/: __init__.py  _currencies.py  amount.py  base.py  basics.py  exceptions.py  particular.py
glQiwiApi/utils/: api_helper.py  api_helper.pyi  basics.py  basics.pyi  certificates.py  compat.py  currency_util.py  date_conversion.py  dates_conversion.py  decorators.py  decorators.pyi  deprecated.py  errors.py  exceptions.py  executor.py  format_casts.py  helper.py  helper.pyi  mypy_hacks.py  payload.py  validators.py
glQiwiApi/yoo_money/: API.py  __init__.py  basic_yoomoney_config.py  client.py  exceptions.py  settings.py  types.py  yoo_money.py  yoomoney_api.py
glparser/: __init__.py  api.py  configs.py  data.py  funcs.py
referrer/proxy/: .dockerignore  Dockerfile  app.py  buildspec.yaml  docker-compose.yaml  pyproject.toml
referrer/proxy/conf-templates/: nginx.conf
referrer/proxy/nginx-delpoy/: Dockerfile  nginx.conf
referrer/proxy/python-deploy/: Dockerfile
referrer/proxy/tests/: conftest.py  test_api.py
tests/: README.MD  conftest.py  qiwi_test.py  requirements.txt  settings.py  you_money_test.py
tests/test_api/: test_init.py
tests/test_builtin/: test_tg_app_proxy.py
tests/test_core/: test_cache.py
tests/test_dispatcher/: conftest.py  mocks.py  test_polling.py  test_webhooks.py
tests/test_plugins/: test_telegram_plugins.py
tests/test_qiwi/: test_cache.py  test_execute_sync_as_sync.py  test_maps.py  test_sync_adapter.py  test_wrapper.py
tests/test_utils/: test_api_helper.py  test_certificates.py  test_collision_detector.py  test_currency_parser.py  test_default_utils.py  test_payload_utils.py
tests/test_yoomoney/: test_wrapper.py
tests/types/: dataset.py
tests/unit/: base.py
(+291 files in other folders)
