[tool.poetry]
name = "glQiwiApi"
version = "2.0.2"
description = "The ultrarapid and multifunctional wrapper over QIWI and YooMoney"
authors = [
    "Gleb Garanin <glebgar567@gmail.com>"
]
repository = "https://github.com/GLEF1X/glQiwiApi"
documentation = "https://glqiwiapi.readthedocs.io/en/latest/"
packages = [
    { include = "./glQiwiApi" }
]
readme = 'README.md'
maintainers = [
    "GLEF1X <glebgar567@gmail.com>",
]
keywords = [
    "qiwi",
    "yoomoney",
    "api",
    "yoo_money",
    "wrapper",
    "asyncio",
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
pytz = "2021.3"
aiohttp = "^3.8.0"
wheel = "^0.36.2"
pydantic = "^1.9.0"
typing_extensions = { version = "^4.0.1", python = "<=3.7" }

# Fast
uvloop = { version = "^0.16.0", markers = "sys_platform == 'darwin' or sys_platform == 'linux'", optional = true }
aiofiles = { version = "^0.8.0", optional = true}

# Docs
Sphinx = { version = "^4.2.0", optional = true }
sphinx-intl = { version = "^2.0.1", optional = true }
sphinx-autobuild = { version = "^2021.3.14", optional = true }
sphinx-copybutton = { version = "^0.4.0", optional = true }
furo = { version = "^2021.11.23", optional = true }
sphinx-prompt = { version = "^1.5.0", optional = true }
Sphinx-Substitution-Extensions = { version = "^2020.9.30", optional = true }
towncrier = { version = "^21.3.0", optional = true }
pygments = { version = "^2.4", optional = true }
pymdown-extensions = { version = "^8.2", optional = true }
markdown-include = { version = "^0.6", optional = true }
sphinxemoji = { version = "*", optional = true }
sphinx-notfound-page = { version = "*", optional = true }



[tool.poetry.dev-dependencies]
# tests
pytest-mock = "^3.6.1"
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
pytest-cov = "^3.0.0"
pytest-lazy-fixture = "^0.6.3"
pytest-aiohttp = "^1.0.4"
timeout-decorator = "^0.5.0"
asynctest = "^0.13.0"
pytest-timeout = "^2.1.0"
pytest-benchmark = { version = "^3.4.1", extras = ["histogram"] }

# development
black = { version = "^22.1.0", python = ">=3.6" }
isort = "^5.8.0"
mypy = "^0.931"
flake8 = "^4.0.1"
async-timeout = "^4.0.2"


# For CI and mypy
types-orjson = "^3.6.2"
types-pytz = "^2021.3.3"
types-aiofiles = "^0.8.2"
geojson-pydantic = "^0.3.1"
aiogram = "^2.19"
cryptography = "^36.0.1"
aiofiles = "^0.8.0"

[tool.poetry.extras]
fast = ["uvloop", "aiofiles"]
docs = [
    "sphinx",
    "sphinx-intl",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "furo",
    "black",
    "sphinx-prompt",
    "Sphinx-Substitution-Extensions",
    "towncrier",
    "pygments",
    "pymdown-extensions",
    "markdown-include",
    "sphinxemoji",
    "sphinx-notfound-page",
]

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = [
    "aiofiles",
    "aiohttp",
    "aiohttp_socks",
    "aresponses",
    "packaging",
    "pkg_resources",
    "pydantic",
    "pytest"
]

[[tool.towncrier.section]]
path = ""

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
