[tool.poetry]
name = "referrer-adapter"
version = "0.0.1beta"
description = ""
authors = ["Gleb Garanin <glebgar567@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
uvicorn = "^0.16.0"
fastapi = "^0.70.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.21.1"
asgi-lifespan = "^1.0.1"
trio = "^0.19.0"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
